--- a/tutorials/NEST_Adding_Models_Tutorial.ipynb
+++ b/tutorials/NEST_Adding_Models_Tutorial.ipynb
@@ -582,15 +582,17 @@
         "---\n",
         "### 3.3.5: Accessing Metadata\n",
         "\n",
-        "The `get_metadata()` method provides information about the model and its outputs.\n",
+        "The `get_metadata()` method is a versatile function that provides information about your model and its outputs. This method is designed to be flexible, allowing it to be called in three different contexts:\n",
         "\n",
-        "This method:\n",
-        "\n",
-        "1. Attempts to load metadata from a predefined location  \n",
-        "2. Returns the metadata as a dictionary  \n",
-        "3. Provides basic information if no metadata file is found  \n",
+        "1. **Class method with explicit parameters**: When users want metadata without initializing the model\n",
+        "2. **Instance method**: When called on an already initialized model\n",
+        "3. **During encoding**: When users request metadata alongside model responses\n",
         "\n",
         "The metadata may include information about voxel indices, channel information, region details, or other model-specific information.\n",
+        "\n",
+        "#### Understanding the Design\n",
+        "This function is a bit more complicated because it needs to handle **all three scenarios**.\n",
+        "However, we tried to make the code snippet below as understandable as possible so that you just need to fill in all the missing information and paste it into your function! Always feel free to check out the existing implementations for reference.\n",
         "\n"
       ]
     },
@@ -602,30 +604,77 @@
       "source": [
         "\n",
         "```python\n",
-        "    def get_metadata(self) -> Dict[str, Any]:\n",
+        "    @classmethod\n",
+        "    def get_metadata(cls, nest_dir=None, subject=None, model_instance=None, \n",
+        "                    # Add any model-specific parameters here (e.g., roi=None)\n",
+        "                    **kwargs) -> Dict[str, Any]:\n",
         "        \"\"\"\n",
-        "        Return metadata about the model and its outputs.\n",
+        "        Retrieve metadata for the model.\n",
         "        \n",
+        "        Parameters\n",
+        "        ----------\n",
+        "        nest_dir : str, optional\n",
+        "            Path to NEST directory.\n",
+        "        subject : int, optional\n",
+        "            Subject number.\n",
+        "        model_instance : BaseModelInterface, optional\n",
+        "            If provided, extract parameters from this model instance.\n",
+        "        # Document any model-specific parameters here\n",
+        "        **kwargs\n",
+        "            Additional parameters.\n",
+        "                \n",
         "        Returns\n",
         "        -------\n",
         "        Dict[str, Any]\n",
-        "            Dictionary containing model metadata.\n",
+        "            Metadata dictionary.\n",
         "        \"\"\"\n",
-        "        # Load metadata file if available\n",
-        "        metadata_path = os.path.join(\n",
-        "            self.nest_dir,\n",
-        "            'your_path')\n",
+        "        # STEP 1: Detect calling context and extract parameters\n",
+        "        # If model_instance is provided, extract parameters from it\n",
+        "        if model_instance is not None:\n",
+        "            nest_dir = model_instance.nest_dir\n",
+        "            subject = model_instance.subject\n",
+        "            # Extract any model-specific parameters you need\n",
+        "            # For example: roi = model_instance.roi\n",
         "        \n",
-        "        try:\n",
-        "            metadata = np.load(metadata_path, allow_pickle=True).item()\n",
+        "        # If this method is called on an instance (rather than the class)\n",
+        "        elif not isinstance(cls, type) and isinstance(cls, BaseModelInterface):\n",
+        "            # 'cls' is actually an instance in this case\n",
+        "            nest_dir = cls.nest_dir\n",
+        "            subject = cls.subject\n",
+        "            # Extract any model-specific attributes\n",
+        "            # For example: roi = cls.roi\n",
+        "        \n",
+        "        # STEP 2: Validate required parameters\n",
+        "        missing_params = []\n",
+        "        if nest_dir is None: missing_params.append('nest_dir')\n",
+        "        if subject is None: missing_params.append('subject')\n",
+        "        # Add checks for any other required parameters\n",
+        "        # For example: if roi is None: missing_params.append('roi')\n",
+        "        \n",
+        "        if missing_params:\n",
+        "            raise InvalidParameterError(f\"Required parameters missing: {', '.join(missing_params)}\")\n",
+        "        \n",
+        "        # STEP 3: Validate parameter values\n",
+        "        validate_subject(subject, cls.VALID_SUBJECTS)\n",
+        "        # Add validation for any other parameters\n",
+        "        # For example: validate_roi(roi, cls.VALID_ROIS)\n",
+        "        \n",
+        "        # STEP 4: Build metadata file path\n",
+        "        # CUSTOMIZE THIS PATH for your specific model\n",
+        "        file_name = os.path.join(nest_dir, \n",
+        "                                'encoding_models', \n",
+        "                                'modality-YOUR_MODALITY',  # Replace with your modality\n",
+        "                                'train_dataset-YOUR_DATASET',  # Replace with your dataset\n",
+        "                                'model-YOUR_MODEL_NAME',  # Replace with your model name\n",
+        "                                'metadata',\n",
+        "                                f'metadata_sub-{subject:02d}.npy')  # Customize filename format\n",
+        "        \n",
+        "        # STEP 5: Load and return metadata\n",
+        "        if os.path.exists(file_name):\n",
+        "            metadata = np.load(file_name, allow_pickle=True).item()\n",
         "            return metadata\n",
-        "        except Exception as e:\n",
-        "            # If no metadata file exists, return basic info\n",
-        "            return {\n",
-        "                \"model_id\": self.MODEL_ID,\n",
-        "                \"subject\": self.subject,\n",
-        "                # Add any other relevant metadata\n",
-        "            }\n"
+        "        else:\n",
+        "            raise FileNotFoundError(f\"Metadata file not found: {file_name}\")\n"
       ]
     },
     {
